--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<hr>
 	<h1>网站建设中</h1>
-	<p>
+	<p style="display: none;">
 		备案号:
 		<a href="http://www.beian.miit.gov.cn/" target="_blank">渝ICP备20009256号</a>
 	</p>
